--- a/test/acceptance/index.html
+++ b/test/acceptance/index.html
@@ -1,12 +1,20 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
+    <style type="text/css">
+        .styled {
+            border-color: black !important;
+            border-style: none !important;
+        }
+    </style>
 </head>
 <body>
 <div>
     <a href="ftp://example.org">ftp</a>
     <a href="http://example.org">http</a>
     <a href="https://example.org">https</a>
+
+    <a href="http://example.org" class="styled">styled</a>
 </div>
 <script type="text/javascript" src="../../highlight.js"></script>
 </body>
