--- a/test/acceptance/index.html
+++ b/test/acceptance/index.html
@@ -14,6 +14,7 @@
 
 <a href="http://example.org" class="styled">styled</a>
 
+<script type="text/javascript" src="../../defaultOptions.js"></script>
 <script type="text/javascript" src="../../highlight.js"></script>
 
 <script type="text/javascript">
