Highlight links with on* event handlers
Event handler attribute list from
<https://html.spec.whatwg.org/multipage/webappapis.html#event-handlers-on-elements,-document-objects,-and-window-objects>.
Commented out rather than removed event handlers which it seems are applied
to elements implicitly.

Skipping a unit test because of
<https://github.com/jsdom/jsdom/issues/2157>.

Resolves #44.

--- a/test/acceptance/index.html
+++ b/test/acceptance/index.html
@@ -32,5 +32,7 @@
     });
 </script>
 
+<a href="https://example.org" onmousedown="location='http://example.org'">modify on mouse down</a>
+
 </body>
 </html>
