Make highlighting of elements with event handlers optional
Resolves #46.

--- a/options.html
+++ b/options.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 <form>
-    <label>Border color <input type="text" id="borderColor"></label>
+    <p><label>Border color <input type="text" id="borderColor"></label></p>
+    <p><label>Treat elements with <code>on*</code> event handlers as insecure <input type="checkbox" id="elementsWithEventHandlersAreInsecure"></label></p>
 
     <button type="submit">Save</button>
 
