Convert acceptance tests to Java

--- a/src/test/resources/index.html
+++ b/src/test/resources/index.html
@@ -14,8 +14,8 @@
 
 <a href="http://example.org" class="styled">styled</a>
 
-<script type="text/javascript" src="../../defaultOptions.js"></script>
-<script type="text/javascript" src="../../highlight.js"></script>
+<script type="text/javascript" src="../../../defaultOptions.js"></script>
+<script type="text/javascript" src="../../../highlight.js"></script>
 
 <script type="text/javascript">
     link = document.createElement("a");
