Override border width CSS property
Resolves #55.

--- a/src/test/resources/index.html
+++ b/src/test/resources/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8"/>
     <style type="text/css">
         .styled {
+            border-width: 0 !important;
             border-color: black !important;
             border-style: none !important;
         }
