Test highlighting in iframe
Resolves #3.

--- a/src/test/resources/index.html
+++ b/src/test/resources/index.html
@@ -32,5 +32,7 @@
 
 <a href="https://example.org" onmousedown="location='http://example.org'">modify on mouse down</a>
 
+<iframe id="iframe" src="iframe.html"></iframe>
+
 </body>
 </html>
