Verify border colour values
Based on <https://stackoverflow.com/a/16994164/96588>.

Resolves #53.

--- a/options.html
+++ b/options.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 <form>
-    <p><label>Border color <input type="text" id="borderColor"></label></p>
+    <p><label>Border color <input type="text" id="borderColor"></label><span id="borderColorMessage" style="display: none; color: red;"></span></p>
+
     <p><label>Treat elements with <code>on*</code> event handlers as insecure <input type="checkbox" id="elementsWithEventHandlersAreInsecure"></label></p>
 
     <button type="submit">Save</button>
