--- a/options.html
+++ b/options.html
@@ -2,10 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <style type="text/css">
+        .error {
+            color: red;
+        }
+    </style>
 </head>
 <body>
 <form>
-    <p><label>Border color <input type="text" id="borderColor"></label><span id="borderColorMessage" style="display: none; color: red;"></span></p>
+    <p><label>Border color <input type="text" id="borderColor"></label></p>
 
     <p><label>Treat elements with <code>on*</code> event handlers as insecure <input type="checkbox" id="elementsWithEventHandlersAreInsecure"></label></p>
 
