--- a/options.html
+++ b/options.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <form>
-    <p><label>Border color <input type="text" id="borderColor"></label></p>
+    <p><label>Border color <input type="text" id="borderColor" autocomplete="off"></label></p>
 
     <p><label>Treat elements with <code>on*</code> event handlers as insecure <input type="checkbox" id="elementsWithEventHandlersAreInsecure"></label></p>
 
